@@ -2,6 +2,7 @@
 	* Fix fencepost error in create.c
 	* Fix uninitialized value in create.c
 	* Handle getcwd() errno values in pkgutil.c
+	* Fix bdb bug: DB->set_flags() before DB->open() in pkgdb_bdb.c
 
 2009-08-10: 0.1 release
 	* V1 and V2 package formats
